--- a/index.html
+++ b/index.html
@@ -21,38 +21,75 @@
 
 <body>
 <!-- Bootstrap Navigation -->
-<header>
-<ul class="nav justify-content-end">
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
+
+  <nav class="navbar navbar-expand-lg ">
+    <a class="navbar-brand" href="#"> <img src="images/LOGO-80.png"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Case Study Menu
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Introduction</a>
+            <a class="dropdown-item" href="#">Research</a>
+            <a class="dropdown-item" href="#">Definition</a>
+            <a class="dropdown-item" href="#">Ideation</a>
+            <a class="dropdown-item" href="#">Prototyping</a>
+            <a class="dropdown-item" href="#">Testing and Results</a>
+            <a class="dropdown-item" href="#">Final Thoughts</a>
+          </div>
+        </li>
+      </ul>
     </div>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Case Study</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-</ul>
-</header>
+  </nav>
 
 
-<!-- Bootstrap Jumbotron -->
+<!-- Bootstrap Componant Jumbotron -->
 <div class="jumbotron .jumbotron-fluid">
     <img src="images/GDRhero.png" style="width: 100%;">
-    <h2>Resposive Non Profit Organization Redesign Group Project (GDRNT)</h2>
+    <h1>Resposive Non Profit Organization Redesign Group Project (GDRNT)</h1>
 </div>
 
-<!-- Jumbotron -->
+<!-- Bootstrap Col System Introduction -->
+<section>
+  
+  <div class="container-fluid">
+    <div class="row">
+      <div class="intro col-sm">
+        <h3>DESCRIPTION</h3>
+        <p>In this research project, we worked as a group to plan and conduct interviews with users, gathered user research, brainstormed solutions, made iterations based on user feedback to create web and mobile wireframes to create hi fidelity prototypes.  </p>
+      </div>
+      <div class="intro col-sm">
+        <h3>GOAL / CHALLENGE</h3>
+        <p>Create a clean, engaging website that helps adopters find exactly what they are looking for - a Great Dane dog to love and/or help.</p>  
+      </div>
+      <div class="intro col-sm">
+        <h3>TIMELINE</h3>
+        <P>Week 1-2: User Research, Interviews, Sketches
+        <br> 3-4: User Testing, Iterating Prototypes</P>
+      </div>
+    </div>
+
+  <div class="row">
+    <div class="intro col-4">
+      <h3>THE TEAM / ROLE</h3>
+     <p>Work with 3 teammates to create a responsive redesign of a non profit organization.
+      <br>My Role: User Research, Interviews, Heuristic Evaluation, Lo>Mid>Hi Fidelity Interactive Prototype, and User Testing.</p>
+    </div>
+    <div class="intro introimage col-8">
+      <img src="images/OriginalSite.png" style="width: 80%;">
+    </div>
+  </div>
+</div>
+  
+</section>
 
 
 
