--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 
 <body>
-<!-- Bootstrap Navigation -->
+<!-- Bootstrap Navigation Componant -->
 
-  <nav class="navbar navbar-expand-lg ">
+  <nav class="navbar fixed-top navbar-expand-lg ">
     <a class="navbar-brand" href="#"> <img src="images/LOGO-80.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
