--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
 <!-- Bootstrap Col System Introduction -->
 <section>
-  
   <div class="container-fluid">
     <div class="row">
       <div class="intro col-sm">
@@ -88,8 +87,61 @@
     </div>
   </div>
 </div>
-  
 </section>
+<div>
+  <h3>THE PROCESS</h3>
+  <img src="images/theProcess.png" style="width: 100%;">
+</div>
+
+<!-- Bootstrap Col System Research -->
+<div class="title">
+  <h1>RESEARCH</h1>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro col-4">
+      <p>We planned and conducted 5 user, 1 organization interviews, and 1 online survey.  (percentage of females)
+        Next we created categories of all the qualitative and quantitave data gathered to see if we can find a pattern or likeness between interviews.
+        All shared the same frustrations of adoption sites not being updated and wanting to really connect with the dog they will be adopting or fostering.
+      </p>
+    </div>
+    <div class="intro col-8">
+      <img src="images/research_img.png" style="width: 85%;">
+    </div>
+  </div>
+</div>
+<!-- Bootstrap Col System Definition -->
+<div class="title">
+  <h1>DEFINITION</h1>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro col-6">
+      <img src="images/Definition_img.png" style="width: 100%;">
+    </div>
+    <div class="intro col-6">
+      <p>Our website is designed to make it easy for people to find their forever friend, even before visiting a shelter. We noticed that potential rescuers are getting overwhelmed by the amount of information provided, causing them to leave the site and resulting in fewer adoption applications. 
+        April, the user, is an experienced veterinarian and animal lover who wants to have a simple and easy way to search for an additional forever friend that will match her animal family’s lifestyle and personality. We determined being able to connect with the dog's personality and being able to find if it's a good fit for a users family or not was top priority.
+      </p>
+    </div>
+  </div>
+</div>
+<!-- Bootstrap Col System Ideation -->
+<div class="title">
+  <h1>IDEATION</h1>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro col-4">
+      <p>We created the user story and followed April's journey to adding another great dane to her family that will fit in well with her lifestyle.  After empathizing with the users frustrations and needs. we were able to brainstorm and iterate on some key features to incoorporate with our site. 
+        -Favorites Page, Interactive Dog Profiles, and Compatibility quiz.
+      </p>
+    </div>
+    <div class="intro col-8">
+      <img src="images/ideation_img.png" style="width: 100%;">
+    </div>
+  </div>
+</div>
 
 
 
