--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
      <p>Work with 3 teammates to create a responsive redesign of a non profit organization.
       <br>My Role: User Research, Interviews, Heuristic Evaluation, Lo>Mid>Hi Fidelity Interactive Prototype, and User Testing.</p>
     </div>
-    <div class="intro introimage col-8">
+    <div class="intro col-8">
       <img src="images/OriginalSite.png" style="width: 80%;">
     </div>
   </div>
@@ -142,7 +142,72 @@
     </div>
   </div>
 </div>
-
+<!-- Bootstrap Col System Prototyping -->
+<div class="title">
+  <h1>PROTOTYPING</h1>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro">
+      <img src="images/prototyping_img.png" style="width: 100%;">
+    </div>
+    <div class="intro">
+      <p>Before jumping into sketches we compared direct and indirect competetors and found that our site was lacking in a lot of areas. We highlighted what was and wasn't working in our evalutaion.  From there we sketched out some ideas, and to our suprise me and my teammate sketched out the same idea!  We all decided to run with it, and turned it into a lo-mid prototype. Our priority was displaying the information users want and need, while maintaining a clean design.
+        We started off designing the mobile version first, as most users searched through their mobile devices.  We then transformed that mobile design into a web layout making the site responsive through out multiple platforms. 
+        After some more testing we finalized the high fidelity prototype. 
+      </p>
+    </div>
+  </div>
+</div>
+<!-- Bootstrap Col System Testing and Results -->
+<div class="title">
+  <h1>TESTING & RESULTS</h1>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro col-sm">
+      <h3>TITLE</h3>
+      <img src="images/Menu1.png" style="width: 100%;"> 
+    </div>
+    <div class="intro col-sm">
+      <h3>TITLE</h3>
+      <img src="images/menu2.png" style="width: 92%;">  
+    </div>
+    <div class="intro col-sm">
+      <img src="images/testing_ppl.png" style="width: 100%;">  
+    </div>
+    <div class="intro">
+      <p>During our low fidelity testing stages we found a huge discovery that the menu navigation did not meet our users needs. 
+        <br>In our mid-fidelity iteration, we tested the three most important tasks: browsing and adopting, donating, and our match-making quiz. In this round, we discovered that our adoption process was still unclear. We also re-organized and re-labeled our menu to address user concerns. 
+       <br> Our high-fidelity prototype proved to be our most effective design, as all users were able to complete our three tasks. We found that there were some updates that were still needed in browsing process and in the donation section. Overall we had a 94% Success Rate with our user tests. 
+      </p>
+    </div>
+  </div>
+  <!-- Bootstrap Col System Final Thoughts -->
+<div class="title">
+  <h1>FINAL THOUGHTS</h1>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro">
+      <p>Reflecting on our starting point and our various iterations, we feel confident in our design choices as a team. During this project we learned the importance of using components consistently throughout the design process. If we used them sooner, we could have saved a lot of time and frustrations.  Throughout the project we were able to overcome our obstacles by maintaining good communication and feedback.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="intro col-4">
+      <p>Moving forward, we plan to incorporate a live chat feature and availability updates on each dog’s profile, as those are other high priority items for our users. 
+      </p>
+    </div>
+    <div class="intro col-8">
+      <img src="images/finalthoughts1.png" style="width: 20%;">
+      <img src="images/finalthoughts2.png" style="width: 20%;">
+      <img src="images/finalthoughts3.png" style="width: 15%;">
+    </div>
+  </div>
+</div>
 
 
 
