--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- Bootstrap Navigation Componant -->
 
   <nav class="navbar fixed-top navbar-expand-lg ">
-    <a class="navbar-brand" href="#"> <img src="images/LOGO-80.png"></a>
+    <a class="navbar-brand" href="https://lruebe16.github.io/UX_UI_HW_19/"> <img src="images/LOGO-80.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,17 +33,17 @@
           <a class="nav-link" href="https://lruebe16.github.io/UX_UI_HW_19/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Case Study Menu
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Introduction</a>
-            <a class="dropdown-item" href="#">Research</a>
-            <a class="dropdown-item" href="#">Definition</a>
-            <a class="dropdown-item" href="#">Ideation</a>
-            <a class="dropdown-item" href="#">Prototyping</a>
-            <a class="dropdown-item" href="#">Testing and Results</a>
-            <a class="dropdown-item" href="#">Final Thoughts</a>
+            <a class="dropdown-item" href="#introduction">Introduction</a>
+            <a class="dropdown-item" href="#research">Research</a>
+            <a class="dropdown-item" href="#definition">Definition</a>
+            <a class="dropdown-item" href="#ideation">Ideation</a>
+            <a class="dropdown-item" href="#prototyping">Prototyping</a>
+            <a class="dropdown-item" href="#testing">Testing and Results</a>
+            <a class="dropdown-item" href="#final">Final Thoughts</a>
           </div>
         </li>
       </ul>
@@ -58,10 +58,10 @@
 </div>
 
 <!-- Bootstrap Col System Introduction -->
-<section>
+<section id="introduction">
   <div class="container-fluid">
     <div class="row">
-      <div class="intro col-sm">
+      <div class="intro col-sm"><div id="introduction"></div>
         <h3>DESCRIPTION</h3>
         <p>In this research project, we worked as a group to plan and conduct interviews with users, gathered user research, brainstormed solutions, made iterations based on user feedback to create web and mobile wireframes to create hi fidelity prototypes.  </p>
       </div>
@@ -94,6 +94,7 @@
 </div>
 
 <!-- Bootstrap Col System Research -->
+<section id="research">
 <div class="title">
   <h1>RESEARCH</h1>
 </div>
@@ -110,7 +111,9 @@
     </div>
   </div>
 </div>
+</section>
 <!-- Bootstrap Col System Definition -->
+<section id="definition">
 <div class="title">
   <h1>DEFINITION</h1>
 </div>
@@ -126,7 +129,9 @@
     </div>
   </div>
 </div>
+</section>
 <!-- Bootstrap Col System Ideation -->
+<section id="ideation">
 <div class="title">
   <h1>IDEATION</h1>
 </div>
@@ -142,7 +147,9 @@
     </div>
   </div>
 </div>
+</section>
 <!-- Bootstrap Col System Prototyping -->
+<section id="prototyping">
 <div class="title">
   <h1>PROTOTYPING</h1>
 </div>
@@ -159,7 +166,9 @@
     </div>
   </div>
 </div>
+</section>
 <!-- Bootstrap Col System Testing and Results -->
+<section id="testing">
 <div class="title">
   <h1>TESTING & RESULTS</h1>
 </div>
@@ -183,8 +192,10 @@
       </p>
     </div>
   </div>
+</section>
   <!-- Bootstrap Col System Final Thoughts -->
-<div class="title">
+<section id="final">
+  <div class="title">
   <h1>FINAL THOUGHTS</h1>
 </div>
 <div class="container-fluid">
@@ -208,10 +219,7 @@
     </div>
   </div>
 </div>
-
-
-
-
+</section>
 <!-- Footer -->
 <footer> 
   <ul>
